# mycalendar

./: Dockerfile  Makefile  Procfile  README.md  docker-compose-legacy.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 33101e092581_make_event_start_and_end_unique_together.py  46aafa5d6967_add_guest_name_column_to_events.py  7d088b510ba0_add_year_column_to_weeks.py  8ebad2a96354_users_table.py  93ff64d86b8a_connect_events_to_users.py  b3b83bb41fd8_make_event_dates_and_user_id_unique.py  cd11670f1c80_add_weeks_and_events_table.py  e9f9d9c1dbe6_add_flask_user_related_tables.py  f46691dbca2d_add_active_column_to_users.py  fdbdba7b7608_test.py
mycalendar/db_models/: __init__.py  db_event.py  db_user_roles.py  db_week.py  event.py  role.py  user.py  user_roles.py  week.py
mycalendar/event/: event.py  event_controller.py  event_view.py
mycalendar/event_modification/: api.py  event_modfication.py
mycalendar/lib/: calculate_week.py  datetime_calculator.py  datetime_helper.py  user_access.py
mycalendar/main/: api.py  main.py  main_controller.py  main_view.py
mycalendar/server/: config.py  factory.py
mycalendar/share/: api.py  share.py  share_controller.py  share_link_creator.py  share_view.py
mycalendar/shared_view/: guest_registrator.py  shared_event_controller.py  shared_view.py  shared_week_controller.py
mycalendar/week/: api.py  week.py  week_controller.py  week_view.py
postgres/: test-db.sql
tests/: __init__.py
tests/db_models/: db_role_test.py  role_test.py  user_roles_test.py  user_test.py  week_test.py
tests/event/: event_test.py
tests/event_modification/: api_test.py  event_modification_test.py  event_test.py
(+32 files in other folders)
