[tool.poetry]
name = "mycalendar"
version = "0.1.0"
description = "Calendar"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
flask = "^1.1.2"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"
Flask-User = "^1.0.2"
email-validator = "^1.1.1"
Flask-SQLAlchemy = "^2.4.4"
PyJWT = "^1.7.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.3"
nose2 = "^0.9.2"
pytruth = "^1.1.0"
blinker = "^1.4"
autoflake = "^1.4"
ddt = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
